Update weather alert API zone in index.html

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
   <script>
     async function loadAlerts() {
       // Washington County / Johnson City zone
-      const url = "https://api.weather.gov/alerts/active/zone/TNZ036";
+      const url = "https://api.weather.gov/alerts/active?zone=TNC179";
 
       try {
         const response = await fetch(url, {
